<resources>
    <string name="app_name">Frugal Feast</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Primer Fragmento</string>
    <string name="second_fragment_label">Segundo Fragmento</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="todo">TODO</string>
    <string name="inicio_de_sesion">Inicio de sesión</string>
    <string name="inicia_sesion_con_tu_cuenta_de_frugal_feast">Inicia sesión con tu cuenta de Frugal Feast</string>
    <string name="usuario_o_correo_electronico">Usuario o Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_tienes_cuenta_registrate">¿No tienes cuenta? Regístrate</string>
    <string name="olvidaste_tu_contrase_a_recuperar_cuenta">¿Olvidaste tu contraseña? Recuperar cuenta</string>
    <string name="texto">Texto</string>
    <string name="agregar_imagen">Agregar Imagen</string>
    <string name="a">+</string>
    <string name="nombre_de_la_receta">Nombre de la receta:</string>
    <string name="preparaci_n">Preparación:</string>
    <string name="ingredientes">Ingredientes:</string>
    <string name="B">+</string>
    <string name="tiempo_de_preparacion">Tiempo de Preparación:</string>
    <string name="continuar">Continuar</string>
    <string name="todo2">TODO</string>
    <string name="todo43">TODO</string>
    <string name="encuentra_gran_variedad_de_recetas_gratis_compartidas_por_cocineros_caseros_como_tu_solo_aca_en_frugal_feast">Encuentra gran variedad de recetas gratis compartidas por cocineros caseros como tú, solo aquí en Frugal Feast</string>
    <string name="img1">img1</string>
    <string name="img2">img2</string>
    <string name="img3">img3</string>
    <string name="continuar2">Continuar</string>
    <string name="unete_a_nuestra_comunidad_de_usuarios_que_estan_usando_nuestra_app_a_diario">Únete a nuestra comunidad de usuarios que están usando nuestra app a diario</string>
    <string name="registrarse">Registrarse</string>
    <string name="estoy_de_acuerdo_con_los_terminos_y_condiciones">Estoy de acuerdo con los Términos y Condiciones.</string>
    <string name="nombre">Nombre</string>
    <string name="apodo">Apodo</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="todo1">TODO</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="ya_tienes_cuenta_iniciar_sesion">¿Ya tienes cuenta? Iniciar Sesión</string>
    <string name="registro">Registro</string>
    <string name="nombre_completo">Nombre Completo:</string>
    <string name="apodo1">Apodo:</string>
    <string name="correo_electronico1">Correo Electrónico:</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="iniciar_sesion1">Iniciar Sesión</string>
    <string name="usuario1">Usuario</string>
    <string name="todo3">TODO</string>
    <string name="inicio_de_sesion1">Inicio de Sesión</string>
    <string name="iniciar_sesion_con_tu_cuenta_frugal_feast1">Iniciar Sesión con tu cuenta de Frugal Feast</string>
    <string name="usuario_o_correo_electronico1">Usuario o Correo Electrónico</string>
    <string name="contrase_a2">Contraseña</string>
    <string name="no_tienes_cuenta_registrate1">¿No tienes cuenta? Regístrate</string>
    <string name="olvidaste_tu_contrase_a_recuperar_cuenta1">¿Olvidaste tu contraseña? Recuperar cuenta</string>
    <string name="buscar_recetas">Buscar Recetas</string>
    <string name="todo4">TODO</string>
    <string name="visto_recientemente">Visto Recientemente</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="mis_recetas1">Mis recetas</string>
    <string name="Agregar">+</string>
    <string name="calcular_calorias">Calcular Calorías</string>
    <string name="todo7">TODO</string>
    <string name="preocupado_por_la_dieta">¿Preocupado por la dieta?</string>
    <string name="iniciar_sesion2">Iniciar Sesión</string>
    <string name="comienza_en_frugal_feast">¡Comienza en Frugal Feast!</string>
    <string name="olvide_mi_contrase_a">Olvidé mi contraseña</string>
    <string name="no_tienes_cuenta_aun">¿No tienes cuenta aún?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="contrase_ahint">Contraseña</string>
    <string name="registroLabel">Registro</string>
    <string name="olvideBtnInicio">Olvidé mi contraseña</string>
    <string name="crear_cuenta3">Crear cuenta</string>
    <string name="guardar">Guardar</string>
    <string name="continuar_1">Continuar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="menu">Menú</string>
    <string name="ajustes">Ajustes</string>
    <string name="tutoriales">Tutoriales</string>
    <string name="contacto">Contacto</string>
    <string name="sobre_nosotros">Sobre nosotros</string>
    <string name="ayuda">Ayuda</string>
    <string name="donde_encontrarnos">¿Dónde encontrarnos?</string>
    <string name="siguenos_en_redes">Síguenos en nuestras redes sociales</string>
    <string name="mision">Misión</string>
    <string name="mision_desc">Nuestra misión es proporcionar recetas fáciles, saludables y económicas para ayudar a los usuarios a disfrutar de la cocina y la alimentación consciente.</string>
    <string name="vision">Visión</string>
    <string name="vision_desc">Nuestra visión es convertirnos en una comunidad líder de cocineros caseros que comparten y descubren recetas innovadoras y accesibles para todos.</string>
    <string name="valores">Valores</string>
    <string name="valores_desc">Promovemos la creatividad, la sostenibilidad, la comunidad y el acceso a una alimentación saludable.</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorials_desc">Explora nuestros tutoriales para aprender nuevas técnicas de cocina y maximizar tu experiencia en la cocina.</string>
    <string name="cambiar_contraseña">Cambiar Contraseña</string>
    <string name="enviar_correo">Enviar Correo</string>
    <string name="campos_requeridos">Todos los campos son obligatorios</string>
    <string name="error_email">Formato de correo electrónico inválido</string>
    <string name="contrasena_diferente">Las contraseñas no coinciden</string>
    <string name="contrase_a_fuerte">La contraseña debe tener al menos 8 caracteres, incluyendo al menos una letra y un número</string>
    <string name="editar">Editar...</string>
    <string name="buscar_receta">Buscar receta...</string>
    <string name="guardar_receta">Guardar Receta</string>
    <string name="eliminar_reciente">Eliminar reciente</string>
    <string name="reestablecer_contrase_a">Reestablecer contraseña</string>
    <string name="ingresa_tu_correo_electr_nico_para_recibir_un_enlace_y_recuperar_tu_cuenta">Ingresa tu correo electrónico para recibir un enlace y recuperar tu cuenta:</string>
    <string name="cancelar">Cancelar</string>
    <string name="tu_correo">Tu correo...</string>
    <string name="empieza_buscando_algo_rico_para_cocinar">¡Empieza buscando algo rico para cocinar!</string>
    <string name="agrega_una_de_tus_recetas">¡Agrega una de tus recetas!</string>
    <string name="recetas_guardadas">Recetas Guardadas</string>
    <string name="inicio">Inicio</string>
    <string name="usuario">Usuario</string>
    <string name="atras">Atras</string>
    <string name="fricas_de_pollo">Fricasé de pollo</string>
    <string name="add">add</string>
    <string name="imagenreceta">imagenReceta</string>
    <string name="editar_receta">Editar Receta</string>
    <string name="error_al_cargar_la_receta">Error al cargar la receta</string>
    <string name="nombre_receta">Nombre receta</string>
    <string name="preparaci_n_de_la_receta">Preparación de la receta...</string>
    <string name="calor_as_por_porci_n">Calorías por porción</string>
    <string name="_210_kcal">210 kcal</string>
    <string name="dificultad">Dificultad</string>
    <string name="f_cil">Fácil</string>
    <string name="_4_porciones">4 porciones</string>
    <string name="porciones">Porciones</string>
    <string name="tiempo">Tiempo</string>
    <string name="lista_de_ingredientes">lista de ingredientes...</string>
    <string name="tiempo_de_preparaci_n_horas">Tiempo de preparación: (Horas)</string>
    <string name="dificultad2">Dificultad:</string>
</resources>
